welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value taille
  taille = getMondeHauteur()
  ^Array1:4: error: not found: value taille
  var tab = new Array[Color] (taille)
                              ^Array1:10: error: not found: value largeur
  largeur = getMondeLargeur()
  ^Array1:11: error: not found: value largeur
  for (i <- 0 to largeur -2) {
                 ^Array1:12: error: not found: value taille
    recule(taille-1)
           ^